<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">


    <TextView
        android:id="@+id/header"
        android:text="Create an Account"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:layout_margin="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/btnXout"
        android:text="X"
        android:textColor="#8c8c8c"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_marginTop="46dp"
        android:layout_marginStart="@dimen/common_margin"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"

        />


    <EditText
        android:id="@+id/etfirstname"
        android:hint="@string/full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/etmobile"
        android:hint="@string/mobile"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etfirstname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <EditText
        android:id="@+id/etusername"
        android:hint="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etmobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etpassword"
        android:hint="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etusername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etconfirmpassword"
        android:hint="@string/confirm_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <ProgressBar
        android:id="@+id/pbuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etconfirmpassword"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsignup"
        android:text="Sign Up"
        android:gravity="center"
        android:layout_width="350dp"
        android:layout_margin="@dimen/header_margin"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/signin_button_background"
        app:layout_constraintTop_toBottomOf="@id/etconfirmpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/tvagreement"
        android:text="@string/license_agreement"
        android:gravity="center"
        android:textColor="#8c8c8c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnsignup"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsignIn"
        android:text="Already have an account?"
        android:textColor="@color/text_color"
        android:background="@drawable/register_button_background"
        android:gravity="center"
        android:layout_margin="@dimen/small_margin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvagreement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>